whatsapp checkout and other checkout form edits

--- a/wp-content/plugins/theme-customisations/custom/css/style.scss
+++ b/wp-content/plugins/theme-customisations/custom/css/style.scss
@@ -594,9 +594,9 @@ header.woocommerce-products-header, header.entry-header {
     text-align: center;
 }
 
-.wc_payment_methods.payment_methods.methods {
-    display: none;
-}
+// .wc_payment_methods.payment_methods.methods {
+//     display: none;
+// }
 
 
 
