--- a/wp-content/plugins/theme-customisations/custom/css/style.css
+++ b/wp-content/plugins/theme-customisations/custom/css/style.css
@@ -598,6 +598,17 @@ header.woocommerce-products-header h1, header.entry-header h1 {
   h2.has-text-align-center {
     font-size: 1.8rem;
   }
+  .row--footer {
+    margin: 0;
+    text-align: center;
+    padding: 2rem 1rem;
+  }
+  .row--footer .col-md-5 img {
+    margin: auto;
+  }
+  .row--footer .footer--col-title {
+    margin: 1rem 0 0.5rem 0;
+  }
 }
 
 /* style */
