--- a/wp-content/plugins/theme-customisations/custom/css/style.scss
+++ b/wp-content/plugins/theme-customisations/custom/css/style.scss
@@ -325,113 +325,11 @@ h2.has-text-align-center {
     font-weight: 800;
 }
 
-#masthead {
-    position: relative;
-    padding: 0;
-    background-color: #f8f9fa;
-
-    &>.col-full {
-        display: flex;
-        justify-content: space-around;
-        align-content: center;
-        // height: 50px;
-        align-items: center;
-        width: 100vw;
-        max-width: 100vw;
-        // padding: 0 0 0 1rem;
-
-        position: relative;
-        left: calc(-50vw + 50%);
-
-        .navbar-title {
-            margin-right: 4rem;
-            font-size: 1.5rem;
-            font-family: 'Josefin Sans', sans-serif;
-            text-transform: uppercase;
-            font-weight: 700;
-        }
-    }
-}
-
-.site-header {
-    padding-top: 0;
-}
-
-.main-navigation ul li a,
-ul.menu li a {
-    text-transform: uppercase;
-}
-
-ul.menu li {
-    list-style-type: none;
-}
-
-.site-header ul.menu li.current-menu-item>a {
-    color: darken($success-color, 10%);
-    font-weight: 600;
-}
-
-.storefront-primary-navigation,
-
-.main-navigation ul.menu ul.sub-menu {
-
-    background-color: #f8f9fa;
-
-}
-
-.main-navigation ul.menu > li > a, .main-navigation ul.nav-menu > li > a {
-    padding: 1.618em 0.5em;
-}
-
-
-.woocommerce-active .site-header .main-navigation {
-    width: 20%;
-    margin-right: 0;
-    float:none;
-}
-
-
-.site-search {
-    margin-bottom: 0;
-    // width: auto;
-    float: none;
-}
 
 ul {
     margin: 0;
 }
 
-.primary-navigation {
-    display: flex;
-    width: auto;
-}
-
-.woocommerce-active .site-header .site-header-cart {
-    text-align: end;
-}
-
-.site-header-my-account.menu {
-    margin-right: -18rem;
-    z-index: 99999999;
-}
-
-.woocommerce-mini-cart.cart_list.product_list_widget {
-    text-align: start;
-}
-
-.badge {
-    background-color: $success-color;
-    border-radius: 10px;
-    color: white;
-    display: inline-block;
-    font-size: 12px;
-    line-height: 1;
-    padding: 3px 7px;
-    text-align: center;
-    vertical-align: middle;
-    white-space: nowrap;
-    font-family: 'Josefin Sans', sans-serif;
-}
 
 *:focus, input:focus, a:focus {
     border: 1px solid transparent !important;
@@ -538,51 +436,6 @@ ul.tabs.wc-tabs {
     color: $success-color;
 }
 
-main#main {
-   position: relative;
-    // padding: 0; 
-    // hide header in main page
-    article#post-13 {
-        header.entry-header {
-            display: none;
-        }
-    }
-}
-
-header.woocommerce-products-header, header.entry-header {
-    display: flex;
-    justify-content: space-around;
-    align-content: center;
-    align-items: center;
-    width: 100vw;
-    max-width: 100vw;
-    position: relative;
-    left: calc(-50vw + 50%);
-    background-image: url('https://i.imgur.com/4wVImkf.png');
-    height: 250px;
-    margin-bottom: 2rem !important;
-    h1 {
-        color: white;
-        letter-spacing: 0.1rem;
-        margin-bottom: 0;
-    }
-}
-
-.storefront-breadcrumb {
-    margin-bottom: 0;
-}
-
-@media (min-width: 768px) {
-   .storefront-breadcrumb {
-        margin-bottom: 0;
-    } 
-}
-
-@media (min-width: 768px) {
-    .storefront-full-width-content.woocommerce-cart .entry-header, .storefront-full-width-content.woocommerce-checkout .entry-header, .storefront-full-width-content.woocommerce-account .entry-header, .storefront-full-width-content .woocommerce-products-header {
-        padding: 0;
-    }
-}
 
 .product_title.entry-title {
     font-size: 2rem;
@@ -598,11 +451,166 @@ header.woocommerce-products-header, header.entry-header {
 //     display: none;
 // }
 
+// header and nav menu
+// #masthead {
+//     position: relative;
+//     padding: 0;
+//     background-color: #f8f9fa;
+
+//     &>.col-full {
+//         display: flex;
+//         justify-content: space-around;
+//         align-content: center;
+//         // height: 50px;
+//         align-items: center;
+//         width: 100vw;
+//         max-width: 100vw;
+//         // padding: 0 0 0 1rem;
+
+//         position: relative;
+//         left: calc(-50vw + 50%);
+
+//         .navbar-title {
+//             margin-right: 4rem;
+//             font-size: 1.5rem;
+//             font-family: 'Josefin Sans', sans-serif;
+//             text-transform: uppercase;
+//             font-weight: 700;
+//         }
+//     }
+// }
+
+
+// .site-header {
+//     padding-top: 0;
+// }
+
+// .main-navigation ul li a,
+// ul.menu li a {
+//     text-transform: uppercase;
+// }
+
+// ul.menu li {
+//     list-style-type: none;
+// }
+
+// .site-header ul.menu li.current-menu-item>a {
+//     color: darken($success-color, 10%);
+//     font-weight: 600;
+// }
+
+// .storefront-primary-navigation,
+
+// .main-navigation ul.menu ul.sub-menu {
+
+//     background-color: #f8f9fa;
+
+// }
+
+// .main-navigation ul.menu > li > a, .main-navigation ul.nav-menu > li > a {
+//     padding: 1.618em 0.5em;
+// }
+
+
+// .woocommerce-active .site-header .main-navigation {
+//     width: 20%;
+//     margin-right: 0;
+//     float:none;
+// }
+
+
+// .site-search {
+//     margin-bottom: 0;
+//     // width: auto;
+//     float: none;
+// }
+
+
+// .primary-navigation {
+//     display: flex;
+//     width: auto;
+// }
+
+// .woocommerce-active .site-header .site-header-cart {
+//     text-align: end;
+// }
+
+// .site-header-my-account.menu {
+//     margin-right: -18rem;
+//     z-index: 99999999;
+// }
+
+// .woocommerce-mini-cart.cart_list.product_list_widget {
+//     text-align: start;
+// }
+
+// .badge {
+//     background-color: $success-color;
+//     border-radius: 10px;
+//     color: white;
+//     display: inline-block;
+//     font-size: 12px;
+//     line-height: 1;
+//     padding: 3px 7px;
+//     text-align: center;
+//     vertical-align: middle;
+//     white-space: nowrap;
+//     font-family: 'Josefin Sans', sans-serif;
+// }
+
+
+main#main {
+    position: relative;
+     // padding: 0; 
+     // hide header in main page
+     article#post-13 {
+         header.entry-header {
+             display: none;
+         }
+     }
+ }
+ 
+ header.woocommerce-products-header, header.entry-header {
+     display: flex;
+     justify-content: space-around;
+     align-content: center;
+     align-items: center;
+     width: 100vw;
+     max-width: 100vw;
+     position: relative;
+     left: calc(-50vw + 50%);
+     background-image: url('https://i.imgur.com/4wVImkf.png');
+     height: 250px;
+     margin-bottom: 2rem !important;
+     h1 {
+         color: white;
+         letter-spacing: 0.1rem;
+         margin-bottom: 0;
+     }
+ }
+
 .woocommerce-products-header.mobile {
     display: none;
-    
 }
 
+ .storefront-breadcrumb {
+    margin-bottom: 0;
+}
+
+@media (min-width: 768px) {
+   .storefront-breadcrumb {
+        margin-bottom: 0;
+    } 
+}
+
+@media (min-width: 768px) {
+    .storefront-full-width-content.woocommerce-cart .entry-header, .storefront-full-width-content.woocommerce-checkout .entry-header, .storefront-full-width-content.woocommerce-account .entry-header, .storefront-full-width-content .woocommerce-products-header {
+        padding: 0;
+    }
+}
+
+
+ // mobile
 // media queries
 @media (min-width: 320px) and (max-width: 480px) {
     .wp-block-jetpack-slideshow.alignfull, .benefits-bar {
